# UKF-Stock-Predictor

./: .gitignore  CMakeLists.txt  LICENSE
include/: Research.hpp  structures.hpp  unscented_kalman_filter.hpp
src/: Research.cpp  UI.cpp  main.cpp  unscented_kalman_filter.cpp
